# xiaomi-video-exif-enchanter

./: .dockerignore  .gitignore  DEVELOPMENT.md  DOCKER.md  Dockerfile  Dockerfile.gpu  Dockerfile.rtx50  README-Docker-GPU.md  README.md  batch_processor.py  build-docker.sh  docker-compose.gpu.yml  docker-compose.rtx50.yml  docker-compose.safe.yml  docker-compose.yml  exif_enhancer.py  exif_enhancer_backup.py  file_manager.py  metadata_manager.py  output_path_generator.py  progress_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_batch_processing.py  test_easyocr_functionality.py  test_issue_6_ocr_patterns.py  test_issue_7_timestamp_parsing.py  test_issue_9_creation_time.py  test_metadata_integration.py  test_ocr_accuracy.py  test_output_path_generation.py  test_performance_improvements.py  test_performance_simple.py  test_timestamp_cropping.py  test_video_error_handling.py  test_xiaomi_integration.py  video_error_handler.py
docs/: README-Batch-Repeat.md  README-Docker-Compose.md  README-Docker-GPU.md
scripts/: batch_process_safe.py  demo_repeat.sh  docker-entrypoint.sh  run_batch.sh  run_batch_repeat.sh  run_batch_simple.sh  test_repeat_basic.sh
tests/: test_batch_resume.py  test_batch_simple.py  test_creation_time_embedding.py  test_exif_enhancer.py  test_ffmpeg_fix.py  test_frame_extraction.py  test_issue_8_ffmpeg_basic.py  test_low_confidence.py  test_opencv_video.py  test_sample_video.py  test_simple_crop.py  test_video_processing.py  test_xiaomi_crop.py
